--- a/src/common/common.less
+++ b/src/common/common.less
@@ -9,12 +9,6 @@ html {
     -ms-text-size-adjust: 100%;
 }
 
-html,
-body,
-#app {
-    height: 100%;
-}
-
 *,
 *:before,
 *:after {
@@ -40,4 +34,9 @@ li {
 
 .clearfix:after {
     clear: both
+}
+
+h2 {
+    font-size: 5vw;
+    font-weight: 100;
 }
