--- a/src/styles/detail.less
+++ b/src/styles/detail.less
@@ -12,14 +12,20 @@
         cursor: pointer;
         color: #ddd;
         > i {
-            cursor: pointer;
+            font-size: 6vw;
         }
     }
     &-banner {
-        background: #dde;
+        overflow: hidden;
+        background: #fff;
     }
     &-content {
-        background: #dd0;
+        background: #fff;
+        margin: 10px 0;
+        padding: 10px;
+        &-main {
+            padding: 20px 0;
+        }
     }
     &-custom {
         background: #dfd;
