--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,23 +1,4 @@
 #app {
-
-    .el-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background: #ddd;
-    }
-
-    .el-main {
-        //margin-top: 40px;
-        margin-bottom: 40px;
-    }
-
-    .el-footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background: #ddd;
-    }
+    background: #f1f1f1;
+    padding: 0 0 60px;
 }
